syntax = "proto3";
package orbit.core;

enum PromptProvenanceType {
  anki = 0;
  note = 1;
  web = 2;
}